--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <script type="module" src="/src/main.js"></script>
   <script src="https://unpkg.com/vue@3"></script>
   <script src="https://unpkg.com/vue-router@4"></script>
+  <script src="https://unpkg.com/vue-router@4.0.15/dist/vue-router.global.js"></script>
+
 </body>
 
 </html>
